syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.podcast.proto.auth";
option java_outer_classname = "AuthProto";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);

  rpc Login (LoginRequest) returns (AuthResponse);

  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string fullName = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}


message AuthResponse {
  bool success = 1;
  string message = 2;
  string accessToken = 3;
  string refreshToken = 4;
  string userId = 5;
}

message ValidateTokenResponse {
  bool isValid = 1;
  string userId = 2;
  string role = 3;
}